--- a/back/taskmanager/Dockerfile
+++ b/back/taskmanager/Dockerfile
@@ -1,7 +1,10 @@
-FROM openjdk:17-jdk
-
+FROM maven:3.8.4 AS build
 WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-COPY target/taskmanager-0.0.1-SNAPSHOT.jar /app
-
+FROM openjdk:17-jdk AS runtime
+WORKDIR /app
+COPY --from=build /app/target/taskmanager-0.0.1-SNAPSHOT.jar /app
 CMD ["java", "-jar", "taskmanager-0.0.1-SNAPSHOT.jar"]
