--- a/front/taskmanager/Dockerfile
+++ b/front/taskmanager/Dockerfile
@@ -1,9 +1,20 @@
-FROM node:latest
+FROM node:20 AS build-stage
 
 WORKDIR /app
 
-COPY . .
+COPY package.json ./
+COPY package-lock.json ./
 
 RUN npm install
 
-CMD ["npm", "run", "dev"]
+COPY . .
+
+RUN npm run build
+
+FROM nginx:alpine AS production-stage
+
+COPY --from=build-stage /app/dist/spa /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
